mp4m.org Website 1.2 (preliminary) - Modified Download page heavily with new information for developers, new requirements (.NET 4.0, C++ 2010 SP1) - Modified Features page to update supported OSes. - Changed header to now feature BASS instead of FMOD - Changed the footer to update version and copyright
git-svn-id: http://hamster-svn/svn/repos/base@100 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
@@ -53,9 +53,10 @@
     <li>Microsoft Windows XP</li>
     <li>Microsoft Windows Vista</li>
     <li>Microsoft Windows 7</li>
+    <li>Microsoft Windows 8 (Developer Preview)</li>
 </ul>
 <p>
-    MPfm also supports Microsoft Windows 2000, Microsoft Windows Server 2003 and Microsoft Windows Server 2008 but is untested on these platforms.
+    MPfm also supports Microsoft Windows Server 2003 and Microsoft Windows Server 2008 but is untested on these platforms.
 </p>
 <h3>Supported Sound Cards / Audio Drivers</h3>
 <p>
@@ -63,13 +64,11 @@
 </p>
 <ul class="code">
     <li>DirectSound</li>
-    <li>Windows Audio Session API</li>
-    <li>Windows Multimedia</li>
-    <li>ASIO 2.0+</li>        
+    <li>Windows Audio Session API (experimental)</li>
+    <li>ASIO 2.0+ (experimental)</li>
 </ul>
 <p>    
-    MPfm supports basically every sound card that works under Microsoft Windows through the DirectSound driver,
-    or through the Windows Multimedia driver.
+    MPfm supports basically every sound card that works under Microsoft Windows through the DirectSound driver. DirectSound also works inside a virtual machine.
 </p>
 <p>
     The Windows Audio Session API driver is only available on the Microsoft Windows Vista and
