--- a/mp4m.org/trunk/mp4m.org/Views/Root/Index.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "MPfm: Music Player for Musicians";    
     ViewBag.Description = "Home page of the MPfm application.";
-    ViewBag.Keywords = "MPfm, Music Player, Music Player for Musicians, Audio Player, Open Source, Freeware, GPLv3, FLAC, MP3, OGG, Time Shifting, Musicians, FMOD, SQLite, System.Data.SQLite, FamFamFam, Mantis, Yanick Castonguay";
+    ViewBag.Keywords = "MPfm, Music Player, Music Player for Musicians, Audio Player, Open Source, Freeware, GPLv3, FLAC, MP3, OGG, Time Shifting, Musicians, BASS, BASS.NET, SQLite, System.Data.SQLite, FamFamFam, Mantis, Yanick Castonguay";
 }
 
     <script type="text/javascript">
@@ -31,7 +31,7 @@
         </li>
         <li class="sliderImage"> 
             <img src="/images/slider_effects.png" alt="MPfm Effects window" /> 
-            <span class="top"><strong>Effects window</strong><br />MPfm features a professional 18-band equalizer based on the FMOD audio library.</span> 
+            <span class="top"><strong>Effects window</strong><br />MPfm features a professional 18-band equalizer based on the BASS audio library.</span> 
         </li>
         <li class="sliderImage"> 
             <img src="/images/slider_playlist.png" alt="MPfm Playlist window" />
