--- a/mp4m.org/trunk/mp4m.org/Views/Shared/_Layout.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                 <div style="text-align:center; width:354px; margin-left:auto; margin-right:auto;">
                     <img id="imageMapLibrairies" src="/Images/header_3rdparty.jpg" usemap="#mapLibrairies" alt="" />
                     <map id="mapLibrairies" name="mapLibrairies">
-                        <area shape="rect" coords="0,15,86,56" href="http://www.fmod.org" alt="FMOD Sound System Homepage" title="FMOD Sound System Homepage"    />
+                        <area shape="rect" coords="0,15,86,56" href="http://www.un4seen.com" alt="BASS/BASS.NET Homepage" title="BASS/BASS.NET Homepage"    />
                         <area shape="rect" coords="92,10,235,56" href="http://www.sqlite.org" alt="SQLite homepage" title="SQLite homepage"    />
                         <area shape="rect" coords="235,19,349,51" href="http://www.famfamfam.com" alt="Famfamfam icons homepage" title="Famfamfam icons homepage"    />                        
                     </map>
@@ -46,11 +46,12 @@
         </div>
         <div id="footer">
             MPfm is © 2011 Yanick Castonguay and is released under the GPLv3 license.
-            <div id="footer_smalltext">            
-                FMOD Sound System is © Firelight Technologies Pty, Ltd., 1994-2011.
+            <div id="footer_smalltext">                                            
+                The BASS audio library is © 2003-2011 Un4seen Developments. // 
+                FamFamFam icons are © Mark James.
             </div>
             <div id="footer_supersmalltext">
-                [Version 1.1.1.0 // 2011-08-03]
+                [Version 1.2.0.0 // 2011-11-06]
             </div>
         </div>
     </div>
