--- a/mp4m.org/trunk/mp4m.org/Views/Root/Download.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Download.cshtml
@@ -16,34 +16,43 @@
     <li>Microsoft Windows XP</li>
     <li>Microsoft Windows Vista</li>
     <li>Microsoft Windows 7</li>
+    <li>Microsoft Windows 8 (Developer Preview)</li>
 </ul>
 <p>
-    MPfm requires the Microsoft .NET Framework 3.5 SP1. To download this version of the .NET framework, click <a href="http://www.microsoft.com/downloads/en/details.aspx?familyid=ab99342f-5d1a-413d-8319-81da479ab0d7" title="Download Microsoft .NET Framework 3.5 SP1">here</a>.
+    MPfm <b><u>requires</u></b> the following software pre-installed to run successfully:
 </p>
+<ul class="code">       
+    <li><b>Microsoft .NET Framework 4.0</b><br />
+    Click <a href="http://www.microsoft.com/download/en/details.aspx?id=17851" title="Download Microsoft .NET Framework 4.0">here</a> to download.
+    </li>
+    <li><b>Microsoft Visual C++ 2010 SP1 (Runtime Components)</b><br />
+    Click <a href="http://www.microsoft.com/download/en/details.aspx?id=8328" title="Download Microsoft Visual C++ 2010 SP1 runtime components (x86)">here</a> to download.
+    </li>
+</ul>
 <h3>Download MPfm</h3>
 <p>
     You can download the latest stable version, which is recommended, or you can try the latest beta version to test the new features.
 </p>
 <p>
     <b>Latest stable version (recommended)</b><br />
-    Version <b>0.4.4.9</b><br />       
+    Version <b>0.4.5.1</b><br />       
 </p>
 <div class="code_ident">
     <p>
-        Download: <a href="http://www.mp4m.org/files/mpfm_0.4.3.1.exe" title="Download MPfm Installer">MPfm 0.4.4.9 - Installer (exe)</a><br />
+        Download: <a href="http://www.mp4m.org/files/mpfm_0.4.3.1.exe" title="Download MPfm Installer">MPfm 0.4.5.1 - Installer (exe)</a><br />
         MD5 checksum: 73f48840b60ab6da68b03acd322445ee<br />
     </p>
     <p>
-        Download: <a href="http://www.mp4m.org/files/mpfm_0.4.3.1.zip" title="Download MPfm Package">MPfm 0.4.4.9 - Package (zip)</a><br />   
+        Download: <a href="http://www.mp4m.org/files/mpfm_0.4.3.1.zip" title="Download MPfm Package">MPfm 0.4.5.1 - Package (zip)</a><br />   
         MD5 checksum: 73f48840b60ab6da68b03acd322445ee
     </p>
 </div>
 <p>
     <b>Latest beta version</b><br />
-    Version <b>0.4.5.0</b><br />    
+    Version <b>0.5.0.0</b><br />    
 </p>
 <p class="code_ident">
-    Download: <a href="http://www.mp4m.org/files/mpfm_0.4.3.2.zip" title="Download MPfm Beta Package">MPfm 0.4.5.0 Beta - Package (zip)</a><br />
+    Download: <a href="http://www.mp4m.org/files/mpfm_0.4.3.2.zip" title="Download MPfm Beta Package">MPfm 0.5.0.0 Beta - Package (zip)</a><br />
     MD5 checksum: 73f48840b60ab6da68b03acd322445ee
 </p>
 <p>
@@ -52,10 +61,35 @@
 </p>
 <h3>Download MPfm Source Code</h3>
 <p>
-    If you are a developer, you are probably interested to check how MPfm works under the hood.
-    Don't forget to read the <a href="/license" title="MPfm License">MPfm license</a> and the 
-    <a href="http://www.gnu.org/licenses/gpl.html" title="GPLv3 License">GPLv3 license</a> 
-    before releasing your modifications to the public!
+    If you are a developer, you are probably interested to check how MPfm works under the hood. You can download the source code and modify the application
+    if you want! However, if you want to release your modifications to the public, do not forget to read the <a href="/license" title="MPfm License">MPfm license</a> 
+    and the <a href="http://www.gnu.org/licenses/gpl.html" title="GPLv3 License">GPLv3 license</a> before releasing your modifications to the public!
+</p>
+<p>
+    You can also use MPfm components in your project if you wish. You can re-use the MPfm player, library, or even the custom Windows Forms controls! Your application 
+    needs to support the <b>.NET Framework 4.0</b> using <b>Microsoft Visual Studio 2010</b>. In order to do so, download the source code package, and add a reference 
+    to the following assemblies in your project (depending on what you want to use):
+</p>
+<ul class="code">       
+    <li><b>MPfm.Core</b><br />
+        Useful methods for all kinds of projects.
+    </li>
+    <li><b>MPfm.Sound</b><br />
+        Bass.NET wrapper, TagLib# wrapper, AudioTools class for calculating audio data, PeakFile class for peak file reading/writing, TestDevice class to test audio devices, etc.
+    </li>    
+    <li><b>MPfm.Library</b><br />
+        Player and Library classes with all their dependencies.
+    </li>
+    <li><b>MPfm.WindowsControls</b><br />
+        Custom Windows Forms controls such as Label, LinkLabel, Button, Panel, ScrollBar, SongGridView, WaveFormDisplay, etc.
+    </li>
+</ul>
+<p>
+    Alternatively, you can also add the MPfm components to your project by adding a reference to the <b>MPfm NuGet packages</b>, which are available <a href="#">here</a>.
+</p>
+<p>
+    <b>Note</b>: You can find a <b>demo application</b> of the Player component in the PlaybackEngineV4 folder of the Source Code package. The demo application
+    has the same features as MPfm, without the eye candy! This makes it easier to learn the Player component and use it in your own project.
 </p>
 <p>
     <b>Source Code</b><br />
