mp4m.org Website 1.2 preliminary - Added more stuff to the Download page, removed useless stuff.
git-svn-id: http://hamster-svn/svn/repos/base@101 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/Content/Site.css
+++ b/mp4m.org/trunk/mp4m.org/Content/Site.css
@@ -293,7 +293,7 @@ p a:hover
 	height: 290px;
 }
 
-#scanmp3headers_screenshots
+.download_screenshots
 {
     float: left;
     padding-right: 10px;
