--- a/mp4m.org/trunk/mp4m.org/Views/Root/Download.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Download.cshtml
@@ -42,10 +42,6 @@
         Download: <a href="http://www.mp4m.org/files/mpfm_0.4.3.1.exe" title="Download MPfm Installer">MPfm 0.4.5.1 - Installer (exe)</a><br />
         MD5 checksum: 73f48840b60ab6da68b03acd322445ee<br />
     </p>
-    <p>
-        Download: <a href="http://www.mp4m.org/files/mpfm_0.4.3.1.zip" title="Download MPfm Package">MPfm 0.4.5.1 - Package (zip)</a><br />   
-        MD5 checksum: 73f48840b60ab6da68b03acd322445ee
-    </p>
 </div>
 <p>
     <b>Latest beta version</b><br />
@@ -69,7 +65,7 @@
     You can also use MPfm components in your project if you wish. You can re-use the MPfm player, library, or even the custom Windows Forms controls! Your application 
     needs to support the <b>.NET Framework 4.0</b> using <b>Microsoft Visual Studio 2010</b>. In order to do so, download the source code package, and add a reference 
     to the following assemblies in your project (depending on what you want to use):
-</p>
+</p>    
 <ul class="code">       
     <li><b>MPfm.Core</b><br />
         Useful methods for all kinds of projects.
@@ -87,9 +83,13 @@
 <p>
     Alternatively, you can also add the MPfm components to your project by adding a reference to the <b>MPfm NuGet packages</b>, which are available <a href="#">here</a>.
 </p>
+    <div class="download_screenshots">
+        <a rel="group_scanmp3headers" href="/Images/screenshots/PlaybackEngineV4Demo.png" title="Playback Engine V4 Demo"><img alt="" src="/Images/screenshots/PlaybackEngineV4Demo_t.png" /></a>
+    </div>    
+
 <p>
     <b>Note</b>: You can find a <b>demo application</b> of the Player component in the PlaybackEngineV4 folder of the Source Code package. The demo application
-    has the same features as MPfm, without the eye candy! This makes it easier to learn the Player component and use it in your own project.
+    has the same features as MPfm, without the eye candy! This makes it easier to learn the Player component and use it in your own project.    
 </p>
 <p>
     <b>Source Code</b><br />
@@ -102,6 +102,7 @@
         MD5 checksum: 73f48840b60ab6da68b03acd322445ee
     </p>
 </div>
+
 <h3>Download Scan MP3 Headers</h3>
 <script type="text/javascript">
     $(document).ready(function () {
@@ -116,10 +117,10 @@
     });
 </script>
 <p>
-    <div id="scanmp3headers_screenshots">
+    <div class="download_screenshots">
         <a rel="group_scanmp3headers" href="/Images/screenshots/scanmp3headers.png" title="Scan MP3 Headers"><img alt="" src="/Images/screenshots/scanmp3headers_t.png" /></a>
     </div>
-    <div id="scanmp3headers_text">
+    <div>
         Scan MP3 Headers is a free tool by the developer of MPfm which analyses your MP3 library and
         makes a list of files that might be corrupted, that do not have the required headers for gapless playback,
         and more. It works using TagLib# (also used in MPfm) and the MPfm Sound Library. It has the same system requirements as MPfm, 
@@ -136,13 +137,3 @@
         MD5 checksum: 73f48840b60ab6da68b03acd322445ee
     </p>
 </div>
-<h3>Change Log / Roadmap</h3>
-<p>
-    You can consult the <a href="http://www.mp4m.org/mantis/changelog_page.php" title="MPfm Change Log">change log</a> 
-    to see what bugs were fixed and what features 
-    were added to the latest stable version.
-</p>
-<p>
-    You can also consult the <a href="http://www.mp4m.org/mantis/roadmap_page.php" title="MPfm Roadmap">roadmap</a> 
-    to see what features will be implemented in the future.    
-</p>
