mp4m.org Website 1.2 preliminary - More work on the Download page
git-svn-id: http://hamster-svn/svn/repos/base@102 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/mp4m.org/trunk/mp4m.org/Views/Root/Download.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Download.cshtml
@@ -58,8 +58,8 @@
 <h3>Download MPfm Source Code</h3>
 <p>
     If you are a developer, you are probably interested to check how MPfm works under the hood. You can download the source code and modify the application
-    if you want! However, if you want to release your modifications to the public, do not forget to read the <a href="/license" title="MPfm License">MPfm license</a> 
-    and the <a href="http://www.gnu.org/licenses/gpl.html" title="GPLv3 License">GPLv3 license</a> before releasing your modifications to the public!
+    if you want! However, if you want to release your modifications to the public, please read the <a href="/license" title="MPfm License">MPfm license</a> 
+    and the <a href="http://www.gnu.org/licenses/gpl.html" title="GPLv3 License">GPLv3 license</a>.
 </p>
 <p>
     You can also use MPfm components in your project if you wish. You can re-use the MPfm player, library, or even the custom Windows Forms controls! Your application 
@@ -81,7 +81,7 @@
     </li>
 </ul>
 <p>
-    Alternatively, you can also add the MPfm components to your project by adding a reference to the <b>MPfm NuGet packages</b>, which are available <a href="#">here</a>.
+    Alternatively, you can also add the MPfm components to your project by adding a reference to the <b>MPfm NuGet packages</b>, which will be available soon.
 </p>
     <div class="download_screenshots">
         <a rel="group_scanmp3headers" href="/Images/screenshots/PlaybackEngineV4Demo.png" title="Playback Engine V4 Demo"><img alt="" src="/Images/screenshots/PlaybackEngineV4Demo_t.png" /></a>
@@ -89,7 +89,8 @@
 
 <p>
     <b>Note</b>: You can find a <b>demo application</b> of the Player component in the PlaybackEngineV4 folder of the Source Code package. The demo application
-    has the same features as MPfm, without the eye candy! This makes it easier to learn the Player component and use it in your own project.    
+    has the same features as MPfm, without the eye candy! This makes it easier to learn the Player component and use it in your own project. You can also read
+    the <b>.CHM help file</b> inside the source code package.
 </p>
 <p>
     <b>Source Code</b><br />
