--- a/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Root/Features.cshtml
@@ -29,21 +29,22 @@
     You can create markers that can used for looping sections in a song for practice.
     </li>
 </ul>
-<h3>MPfm is open source and released under the GPLv3 license</h3>
+<h3>MPfm is freeware, open source and released under the GPLv3 license</h3>
 <p>
     <img src="/Images/gplv3-127x51.png" class="floatRight" width="127" height="51" alt="GPLv3 Logo" />
-    If you are a <b>user</b>, this means that this application will <b>always stay free</b> and <b>community driven</b>. If the 
-    application becomes outdated or deprecated, developers will be able to take the source code, update the application and add new features. 
-    However, since MPfm is released under the <b>GPLv3 license</b>,
-    the developers will have to release the source code and make the application free to download.
-</p>
-<p>
-    If you are a <b>developer</b>, this means that you can download the source code and make your own modifications.
-    You are allowed to release your modifications to the community, but only if you also release the source code.
-    Under the <b>GPLv3 license</b>, you cannot release a commercial product based on the MPfm source code.    
+    If you are a <b>user</b>, this means that this application will <b>always stay free</b> and <b>community driven</b>. Should the
+    application becomes outdated or deprecated, other developers will be able to take the source code, update the application and add new features.
 </p>
 <p>
     For more information about the GPLv3 license, click <a href="http://www.gnu.org/licenses/gpl.html" title="GPLv3 License">here</a>.
+</p>
+<p>
+    If you are a <b>developer</b>, this means that you can download the source code and make your own modifications. You could also re-use any 
+    MPfm component (player, library, Windows Forms controls, BASS.NET wrapper, etc.) as-is in your own project, including commercial projects.
+</p>
+<p>
+    For more information about using the MPfm source code in your own project, go to the 
+    <a href="/developers" title="MPfm Developers Page">Developers</a> page.
 </p>
 <h3>Supported Operating Systems</h3>
 <p>
