--- a/mp4m.org/trunk/mp4m.org/Views/Shared/_Layout.cshtml
+++ b/mp4m.org/trunk/mp4m.org/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
                 <a href="/screenshots">Screenshots</a>               
                 <a href="/download">Download</a>
                 <a href="/license">License</a>
-                <a href="/support">Support</a>
-                <a href="/blog">Blog</a>
+                <a href="/developers">Developers</a>
+                <a href="/support">Support</a>                                
             </div>
             <div id="header_bottomtile"></div>
             <div id="header_thirdparty">
@@ -45,13 +45,14 @@
             @RenderBody()
         </div>
         <div id="footer">
-            MPfm is © 2011 Yanick Castonguay and is released under the GPLv3 license.
+            MPfm: Music Player for Musicians is © 2011 Yanick Castonguay and is released under the GPLv3 license.
             <div id="footer_smalltext">                                            
-                The BASS audio library is © 2003-2011 Un4seen Developments. // 
-                FamFamFam icons are © Mark James.
+                The BASS audio library is © 1999-2011 Un4seen Developments. <span class="footerSeparator">//</span>
+                The BASS.NET audio library is © 2005-2011 radio42. <span class="footerSeparator">//</span>
+                FamFamFam icons are © 2011 Mark James.
             </div>
             <div id="footer_supersmalltext">
-                [Version 1.2.0.0 // 2011-11-06]
+                [Version 1.2.1.0 <span class="footerSeparator">//</span> 2011-12-20]
             </div>
         </div>
     </div>
